# Archimedes

./: CONTRIBUTING.md  README.md  STYLE_GUIDE.md  devnotes.txt
lib/: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
lib/include/archimedes/: api.h
lib/include/archimedes/chem/: chem.h  mol_utils.h
lib/include/archimedes/err/: codes.inc  err.h
lib/include/archimedes/std/: exit.h  heap.h  int.h  mem.h  print.h  varg.h
lib/include/archimedes/test/: test.h
lib/src/: api.c  heap.c
lib/src/chem/: chem.c
lib/src/err/: err.c
lib/src/std/: print.h
lib/src/test/: test.c
lib/tests/: CMakeLists.txt  test_main.c
lib/tests/integration/: ncurses.c
lib/tests/unit/err/: test_set.c
